Update RESTFUL routes
Now four restful routes have been implemented. All that is left is the edit, update and delete routes.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,9 +2,11 @@
     <ul>
         <% libraries.forEach( library => { %>
             <li>
-                <%= library.name %> <br/>
-                <%= library.location %> <br/>
-                <%= library.rating %> 
+                <a href="/libraries/<%= library.id %>">
+                    <%= library.name %>, 
+                    <%= library.location %>, 
+                    <%= library.rating %> 
+                </a>
             </li>
         <% }); %>
     </ul>
